# imageclient

./: .gitignore  CMakeLists.txt  License.md  Makefile  ReadMe.txt  Readme.md  TestApp.pro  application.qrc  bgcpl_wgt.cpp  bgcpl_wgt.h  config.h.in  createSubwin.cpp  device.cpp  enum.h  histogram_item.cpp  histogram_item.h  imageClient.pri  imageClient.pro  imageClient.sln  imageclient.spec.in  imagehistogram.cpp  imagehistogram.h  imagewidget.cpp  imagewidget.h  imgmanipulation.cpp  imgmanipulation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manipulator.cpp  manipulator.h  menu.cpp  menutab.cpp  menutab.h  moc_bgcpl_wgt.cpp  moc_imagehistogram.cpp  moc_imagewidget.cpp  moc_imgmanipulation.cpp  moc_mainwindow.cpp  (+51 more)
TestServer_1/: CMakeLists.txt  ClassFactory.cpp  Makefile  Makefile.bck  Mytest  Mytest.cpp  Mytest.h  Mytest.xmi  MytestClass.cpp  MytestClass.h  MytestStateMachine.cpp  TangoConfig.cmake  TangoLibsConfig.cmake  main.cpp
TestServer_1/pythonClient/: app.py  app.py~
UML/: Class_Diagramm.uxf
argtable/Win/: argtable2.lib  impargtable2.lib
argtable/nix/lib64/: libargtable2.la  libargtable2.so.0.1.8
argtable/nix/lib64/pkgconfig/: argtable2.pc
argtable/src/: Makefile
argtable/src/.deps/: arg_file.Plo  arg_rem.Plo  argtable2.Plo
html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _class_factory_8cpp.html  _class_factory_8cpp_source.html  _mytest_8cpp.html  _mytest_8cpp_source.html  _mytest_8h.html  _mytest_8h_source.html  _mytest_class_8cpp.html  _mytest_class_8cpp_source.html  _mytest_class_8h.html  _mytest_class_8h_source.html  _mytest_state_machine_8cpp.html  _mytest_state_machine_8cpp_source.html  annotated.html  app_8py.html  app_8py_source.html  bgcpl__wgt_8cpp.html  bgcpl__wgt_8cpp__incl.map  bgcpl__wgt_8cpp__incl.md5  bgcpl__wgt_8cpp_source.html  bgcpl__wgt_8h.html  bgcpl__wgt_8h__dep__incl.map  bgcpl__wgt_8h__dep__incl.md5  bgcpl__wgt_8h__incl.map  bgcpl__wgt_8h__incl.md5  bgcpl__wgt_8h_source.html  bin_2ui__mainwindow_8h.html  bin_2ui__mainwindow_8h_source.html  class_binar___w_g_t-members.html  class_binar___w_g_t.html  class_binar___w_g_t_a302e30db9575257e253e06a8ccb9c921_cgraph.md5  class_binar___w_g_t_a302e30db9575257e253e06a8ccb9c921_icgraph.map  class_binar___w_g_t_a302e30db9575257e253e06a8ccb9c921_icgraph.md5  class_binar___w_g_t_a30d75ddfae9a9ddb77e5ccc0bc9ce75c_cgraph.map  class_binar___w_g_t_a30d75ddfae9a9ddb77e5ccc0bc9ce75c_cgraph.md5  class_binar___w_g_t_add09f7f9f52abb3990d9d33030a83c53_cgraph.map  class_binar___w_g_t_aed982d68b8bf87e4e5064a9c04f7e051_icgraph.map  (+1548 more)
html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_7e.html  classes_62.html  classes_63.html  classes_64.html  classes_66.html  classes_67.html  classes_68.html  classes_69.html  classes_6c.html  classes_6d.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  classes_76.html  enums_62.html  enums_68.html  enums_69.html  enums_74.html  (+71 more)
imageWidget/: CMakeLists.txt  TImageSnapshot  eimagebase.cpp  eimagebase.h  eimagescreen.cpp  eimagescreen.h  etangodevice.cpp  etangodevice.h  imageWidget.pro  imagehistogram.cpp  imagehistogram.h  imagemanipulator.h  imagemarker.cpp  imagemarker.h  imagewidgetplugin.cpp  imagewidgetplugin.h  qrc_qtangoplugin.cpp  roiclass.cpp  tangoImageWidget.vcproj  timage.cpp  timage.h  timagesnapshot.cpp  vc90.idb
imageclient/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  realtimecontainer.cpp  realtimecontainer.h  realtimesubwindow.cpp  realtimesubwindow.h  roicontainer.cpp  roisubwindow.cpp  snapshotcontainer.cpp  snapshotcontainer.h  snapshotsubwindow.cpp  snapshotsubwindow.h  starttangowin.cpp  starttangowin.h  subwindowmdi.cpp  subwindowmdi.h  syncdialog.cpp  syncdialog.h  syncdialog.ui  tangocommandwin.cpp  tangocommandwin.h
imageclient/argtable/src/.deps/: arg_date.Plo  arg_dbl.Plo  arg_int.Plo  arg_rex.Plo
imageclient2.0/: CMakeLists.txt  application.qrc  imageclient2  imageclient2.0.pro  imageclient2.vcproj  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_application.cpp  realtimecontainer.cpp  realtimecontainer.h  realtimesubwindow.cpp  realtimesubwindow.h  roicontainer.cpp  roicontainer.h  roisubwindow.h  snapshotcontainer.cpp  snapshotcontainer.h  snapshotsubwindow.h  starttangowin.cpp  subwindowmdi.cpp  subwindowmdi.h  tangoservervariableswin.cpp  tangoservervariableswin.h  ui_mainwindow.h  vc90.idb
imageclient2.0/argtable/src/: READ_Me-imageClient
imageclient2.0/argtable/src/.deps/: arg_end.Plo  arg_lit.Plo  arg_str.Plo
imagewidget/: CMakeLists.txt  TImage  editmarkerdialog.cpp  editmarkerdialog.h  editmarkerdialog.ui  eimagebase.cpp  eimagebase.h  eimagescreen.cpp  eimagescreen.h  etangodevice.cpp  etangodevice.h  imagehistogram.cpp  imagemanipulator.cpp  imagemarker.cpp  imagemarker.h  imagepicturemode.cpp  imagepicturemode.h  imagewidgetplugin.cpp  imagewidgetplugin.h  qtangoplugin.qrc  roiclass.cpp  roiclass.h  timage.cpp  timage.h  timagesnapshot.cpp  timagesnapshot.h
imagewidget/forms/: timage.cpp
plugins/imageformats/: qgif4.lib  qgifd4.lib  qjpeg4.lib  qjpegd4.lib  qtiff4.lib  qtiffd4.lib
test/: Makefile  main.cpp  moc_widget.cpp  test  test.pro  ui_widget.h
